intro-section-with-dropdown-navigation-main/style.css
/* root */

:root {
  /* colors */

  --neutral-white: hsl(0, 0%, 98%);
  --neutral-grey: hsl(0, 0%, 41%);
  --neutral-black: hsl(0, 0%, 8%);

  /* typography */

  --font-size: 16 px;

  /* font family */

  --font-family: "Epilogue", sans-serif;

  /* font weight */

  --fw-regular: 500;
  --fw-bold: 700;
}

/* Reset CSS */

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* utility classes */

body {
  font-family: var(--font-family);
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
}

.hidden {
  display: none;
}

/* header starts */

.header-container {
  display: flex;
  justify-content: space-between;
  padding: 1.5rem 1rem;
}

#menu-button {
  background: transparent;
  border: none;
  cursor: pointer;
}

/* header ends */

/* main starts */

.main-container {
  display: flex;
  flex-direction: column-reverse;
}

.hero-image img {
  width: 100%;
}

.hero-content {
  padding: 2.5rem 1rem;
}

.hero-content h1 {
  font-size: 2.5rem;
  text-align: center;
}

.hero-content p {
  text-align: center;
  padding: 1.5rem 0;
  font-size: var(--font-size);
  color: var(--neutral-grey);
  line-height: 1.5;
}

.line-break {
  display: none;
}

.hero-content button {
  background-color: var(--neutral-black);
  font-family: var(--font-family);
  color: var(--neutral-white);
  padding: 0.5rem 1.2rem;
  font-weight: var(--fw-bold);
  margin: 0 0 1.5rem;
  border-radius: 15px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  -ms-border-radius: 15px;
  -o-border-radius: 15px;
}

.hero-content button:hover {
  background-color: transparent;
  color: var(--neutral-black);
}

.hero-content .button-learn {
  text-align: center;
}

.brands img {
  object-fit: contain;
  width: 20%;
}

.brands {
  display: flex;
  gap: 2rem;
  padding: 1rem 1.5rem;
  padding-left: 0.8rem;
  height: 6.5vh;
}

/* main ends */

/* nav mobile starts */

.drop-shadow {
  background-color: hsl(0, 0%, 8%, 0.8);
  height: 100vh;
  width: 100vw;
  position: absolute;
  z-index: 10;
}

.nav-list {
  background-color: white;
  height: 100vh;
  width: 65vw;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 99;
  color: var(--neutral-grey);
}

#menu-close {
  background: transparent;
  border: none;
  position: fixed;

  top: 2.3%;
  left: 89.5%;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
}

.nav-list {
  display: none;
}

.nav-list ul {
  margin: 5rem 0 2rem;
}

.nav-list li {
  display: block;
  padding: 0.8rem 1.5rem;
  cursor: pointer;
}

.nav-list li:hover {
  color: var(--neutral-black);
  font-weight: var(--fw-bold);
}

.buttons {
  display: flex;
  flex-direction: column;
  /* gap: 1rem; */
  padding: 0 2rem;
}

.buttons button {
  padding: 0.8rem 1.5rem;
  width: 100%;
  font-family: var(--font-family);
  font-size: 15px;
  background: transparent;
  color: var(--neutral-grey);
  cursor: pointer;
}

.buttons .btn-login {
  border: none;
}
.buttons .btn-login:hover {
  color: var(--neutral-black);
  font-weight: var(--fw-bold);
}

.buttons .btn-reg {
  border: 1px solid var(--neutral-grey);
  border-radius: 15px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  -ms-border-radius: 15px;
  -o-border-radius: 15px;
}
.buttons .btn-reg:hover {
  color: var(--neutral-black);
  font-weight: var(--fw-bold);
  border: 1px solid var(--neutral-black);
}

.arrow {
  padding-left: 0.5rem;
}

.nav-arrow-1 ul,
.nav-arrow-2 ul {
  margin: 0;
  padding: 0.5rem 2rem;
}

.nav-arrow-1 span,
.nav-arrow-2 span {
  padding-right: 1rem;
}
.nav-arrow-1 img {
  width: 15px;
}

/* media query starts */

@media (min-width: 860px) {
  /* desktop */

  body {
    height: 100vh !important;
  }

  .menu-button {
    display: none;
  }
  #menu-close {
    display: none;
  }
  .nav-list {
    display: block !important;
    height: auto;
    background-color: transparent;
    position: relative;
    margin-left: 1.5rem;
    width: 95%;
  }

  .nav-list ul {
    margin: 0;
    padding: 0 2rem;
  }

  .nav-list li {
    padding: 0;
  }

  .header-container {
    display: flex;
    justify-content: start;
    padding: 1.5rem 2rem;
    width: 100%;
  }

  .logo {
    display: flex;
    align-items: center;
  }

  .nav-items {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .nav-items > ul {
    display: flex;
    justify-content: space-between;
    gap: 3rem;
  }
  .nav-items li {
    font-size: 14px;
  }
  .buttons {
    display: flex;
    flex-direction: row;
    padding: 0;
    margin: 0;
  }

  .buttons button {
    font-size: 14px;
  }

  .main-container {
    display: flex;
    flex-direction: row;
    /* gap: 5rem; */
    width: 80%;
    height: 70%;
    margin: 1.5rem auto 2.5rem;
  }
  .hero-image {
    width: 40%;
  }

  .hero-image img {
    height: 100%;
    object-fit: cover;
  }
  .hero-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 60%;
  }
  .hero-content h1 {
    text-align: start;
    font-size: 3.5rem;
  }

  .hero-content p {
    text-align: start;
    margin-right: 30%;
  }
  .hero-content .button-learn {
    text-align: start;
    margin: 1rem 0 2.5rem;
  }
  .button-learn button {
    margin: 0;
  }

  .brands {
    padding: 0;
    height: 5vh !important;
    margin: 2rem 0;
  }
  .brands img {
    object-fit: contain;
    width: 15%;
  }
  .line-break {
    display: block !important;
  }

  .nav-arrow-1 {
    display: flex;
    flex-direction: column;
    padding: 1rem 0 0;
    position: fixed;
    top: 7%;
    left: 6%;
    background: var(--neutral-white);
    box-shadow: 2px 2px 20px 2px;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
  }
  .nav-arrow-1 li,
  .nav-arrow-2 li {
    margin: 0;
    padding-bottom: 1rem;
  }

  .nav-arrow-2 {
    display: flex;
    flex-direction: column;
    padding: 1rem 0 0;
    position: fixed;
    top: 7%;
    left: 20%;
    background: var(--neutral-white);
    box-shadow: 2px 2px 20px 2px;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
  }
  .close {
    display: none;
  }
}

@media (min-width: 1101px) and (max-width: 1350px) {
  .nav-arrow-1 {
    left: 6%;
  }
  .nav-arrow-2 {
    left: 24%;
  }
}
@media (min-width: 861px) and (max-width: 1100px) {
  .nav-arrow-1 {
    left: 8%;
  }
  .nav-arrow-2 {
    left: 30%;
  }
}

/* footer starts */

.attribution {
  background-color: black;
  color: var(--neutral-white);
  font-size: 12px;
  text-align: center;
  padding: 2rem 1rem;
  margin-top: 1rem;
  /* display: none; */
}
.attribution a {
  color: tomato;
  font-weight: var(--fw-bold);
}

/* footer ends */

/* challenge completed */

